--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-    <h1>TEST webpack</h1>
-    <div id="app"></div>
-    <img src="img/logo.png" alt="a">
-</body>
+    <head>
+        <meta charset="UTF-8">
+
+        <title>Title</title>
+
+        <meta charset="UTF-8">
+        <meta name="description" content="text">
+        <meta name="keywords" content="text">
+        <meta name="author" content="nekit-1989@mail.ru">
+
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+
+        <link rel="shortcut icon" href="img/favicon/favicon.ico" type="image/x-icon">
+        <!--<link rel="apple-touch-icon" href="img/favicon/apple-touch-icon.png">-->
+        <!--<link rel="apple-touch-icon" sizes="72x72" href="img/favicon/apple-touch-icon-72x72.png">-->
+        <!--<link rel="apple-touch-icon" sizes="114x114" href="img/favicon/apple-touch-icon-114x114.png">-->
+
+    </head>
+    <body>
+        <h1>TEST webpack</h1>
+        <div id="app"></div>
+        <img src="img/logo.png" alt="logo">
+    </body>
 </html>
